--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <!-- bloc home -->
 
-    <div class="home">
+    <div class="home" id="home">
         <div class="home__text">
             <h4>Lorem Hospital</h4>
             <div class="home__links">
@@ -82,5 +82,92 @@
         </div>
     </div>
 
+    <!-- bloc formulaire rendez-vous -->
+
+    <div class="parent-form">
+        <div class="form__block">
+            <h4>Prenez rendez-vous</h4>
+            <form action="">
+                <div>
+                    <input type="text" placeholder="votre nom">
+                    <input type="text" placeholder="votre email">
+                </div>
+                <div>
+                    <input type="text" placeholder="votre numero de telephone">
+                    <input type="text" placeholder="objet">
+                </div>
+
+                <textarea name="" id="" rows="4" placeholder="Votre message..."></textarea>
+                <button type="">Soumettre</button>
+            </form>
+        </div>
+        <div class="form__image">
+            <!-- image background holder  -->
+        </div>
+    </div>
+
+    <!-- bloc galerie -->
+
+    <div class="parent-galerie">
+        <h4>Photos</h4>
+        <div class="galerie">
+            <div class="galerie__item"></div>
+            <div class="galerie__item"></div>
+            <div class="galerie__item"></div>
+            <div class="galerie__item"></div>
+            <div class="galerie__item"></div>
+            <div class="galerie__item"></div>
+        </div>
+    </div>
+
+
+    <!-- bloc urgent service -->
+
+    <div class="parent-urgence">
+        <div class="urgence">
+            Appelez +939 293 923<br>
+            Besoin d'une aide d'urgence?<br>
+            Appelez nous!
+        </div>
+    </div>
+
+    <!-- bbloc ce que nous faisons -->
+
+    <div class="parent-whatWeDo">
+        <h4>Nos services</h4>
+        <div class="whatWeDo">
+            <div class="whatWeDo__item">
+                <i class="fas fa-pills"></i>
+                <h4>Pharmacie</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo rerum magni libero ipsam pariatur facilis enim eius neque quibusdam? Voluptatum!
+                </p>
+            </div>
+            <div class="whatWeDo__item">
+                <i class="fas fa-pills"></i>
+                <h4>Pharmacie</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo rerum magni libero ipsam pariatur facilis enim eius neque quibusdam? Voluptatum!
+                </p>
+            </div>
+            <div class="whatWeDo__item">
+                <i class="fas fa-pills"></i>
+                <h4>Pharmacie</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo rerum magni libero ipsam pariatur facilis enim eius neque quibusdam? Voluptatum!
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- bloc footer -->
+
+    <div class="parent-footer">
+        <div class="footer">
+            <h4>Lorem Footer</h4>
+        </div>
+    </div>
+
+    <a class="btn-goUp" href="#home"><i class="fas fa-arrow-up"></i></a>
 </body>
 </html>
