about and services pages done

--- a/services.html
+++ b/services.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-    <title>Acceuil|HosptalName</title>
+    <link rel="stylesheet" href="/css/style_services.css">
+    <link rel="stylesheet" href="/css/header.css">
+    <title>Aboout | HosptalName</title>
 </head>
 <body>
     
@@ -32,106 +33,7 @@
         </div>
     </div>
 
-    <!-- bloc home -->
-
-    <div class="home" id="home">
-        <div class="home__text">
-            <h4>Lorem Hospital</h4>
-            <div class="home__links">
-                <a href="" class="home__link">En savoir plus</a>
-                <a href="" class="home__link">Rendez-vous</a>
-            </div>
-        </div>
-    </div>
-
-
-    <!-- bloc ce que nous avons -->
-
-    <div class="parent_whatWeHave">
-        <div class="whatWeHave">
-            <div class="whatWeHave__option">
-                <i class="fas fa-phone-alt"></i>
-                <div class="option__text">
-                    <h3>Appel 257 78 888 833</h3>
-                    <p>
-                        Avenue Lorem,ipsum<br>
-                        Bujumura-Burundi
-                    </p>
-                </div>
-            </div>
-            <div class="whatWeHave__option">
-                <i class="fas fa-clock"></i>
-                <div class="option__text">
-                    <h3>Heure de travail</h3>
-                    <p>
-                        Avenue Lorem,ipsum<br>
-                        Bujumura-Burundi
-                    </p>
-                </div>
-            </div>
-            <div class="whatWeHave__option">
-                <i class="fas fa-file-medical"></i>
-                <div class="option__text">
-                    <h3>Appel 257 78 888 833</h3>
-                    <p>
-                        Avenue Lorem,ipsum<br>
-                        Bujumura-Burundi
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- bloc formulaire rendez-vous -->
-
-    <div class="parent-form">
-        <div class="form__block">
-            <h4>Prenez rendez-vous</h4>
-            <form action="">
-                <div>
-                    <input type="text" placeholder="votre nom">
-                    <input type="text" placeholder="votre email">
-                </div>
-                <div>
-                    <input type="text" placeholder="votre numero de telephone">
-                    <input type="text" placeholder="objet">
-                </div>
-
-                <textarea name="" id="" rows="4" placeholder="Votre message..."></textarea>
-                <button type="">Soumettre</button>
-            </form>
-        </div>
-        <div class="form__image">
-            <!-- image background holder  -->
-        </div>
-    </div>
-
-    <!-- bloc galerie -->
-
-    <div class="parent-galerie">
-        <h4>Photos</h4>
-        <div class="galerie">
-            <div class="galerie__item"></div>
-            <div class="galerie__item"></div>
-            <div class="galerie__item"></div>
-            <div class="galerie__item"></div>
-            <div class="galerie__item"></div>
-            <div class="galerie__item"></div>
-        </div>
-    </div>
-
-
-    <!-- bloc urgent service -->
-
-    <div class="parent-urgence">
-        <div class="urgence">
-            Appelez +939 293 923<br>
-            Besoin d'une aide d'urgence?<br>
-            Appelez nous!
-        </div>
-    </div>
-
-    <!-- bbloc ce que nous faisons -->
+    <!-- bloc ce que nous faisons -->
 
     <div class="parent-whatWeDo">
         <h4>Nos services</h4>
@@ -204,6 +106,5 @@
         </div>
     </div>
 
-    <a class="btn-goUp" href="#home"><i class="fas fa-arrow-up"></i></a>
 </body>
 </html>
