--- a/blog.html
+++ b/blog.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style_blog.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/style_about.css">
-    <link rel="stylesheet" href="/css/header.css">
-    <title>Aboout | HosptalName</title>
+    <title>Acceuil|HosptalName</title>
 </head>
 <body>
     
@@ -33,40 +32,39 @@
         </div>
     </div>
 
-    <!-- bloc about -->
+    <!-- bloc of blogs -->
 
-    <div class="about">
-        <div class="about__item">
-            <h4>A propos</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa nemo esse fugiat tempora adipisci!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi fugiat quasi excepturi. Tempora ullam porro iure voluptatibus omnis, quos error officiis quam, officia laboriosam consectetur, reiciendis consequatur a debitis! Esse animi minus fugit ipsam ipsum magni facilis culpa architecto, ab quis sapiente pariatur! Ducimus accusamus rem cumque aut veritatis enim natus magnam corporis praesentium, quibusdam dolore, omnis delectus officia dicta cupiditate, tempora assumenda aliquam necessitatibus? Fugiat, quibusdam rerum. Sint harum sapiente cum laborum facilis, pariatur dicta, nostrum debitis praesentium quo voluptatem architecto repudiandae est inventore quae at corporis fugiat dolor? Sint architecto soluta distinctio consequatur nisi alias amet doloremque explicabo?</p>
-        </div>
-        <div class="about__item">
-            <img src="/img/for-professionals-1000x700.jpg" alt="">
-        </div>
-    </div>
+    <div class="parent-blog">
+        <div class="blog">
+            <a href="#" class="blog__item">
+                <p>Janvier 13,2021</p>
+                <h4>Lorem ipsum dolor, sit amet consectetur adipisicing .</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, dignissimos, architecto totam accusantium provident explicabo delectus laudantium expedita magni nulla natus officiis. Voluptate delectus minus deleniti asperiores distinctio aliquid nesciunt.
+                </p>
+            </a>
 
+            <a href="#" class="blog__item">
+                <p>Janvier 13,2021</p>
+                <h4>Lorem ipsum dolor, sit amet consectetur adipisicing .</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, dignissimos, architecto totam accusantium provident explicabo delectus laudantium expedita magni nulla natus officiis. Voluptate delectus minus deleniti asperiores distinctio aliquid nesciunt.
+                </p>
+            </a>
 
-    <div class="historique">
-        <h4>Historique</h4>
-        <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi nisi temporibus, magnam, et illum laudantium odit recusandae eveniet blanditiis explicabo itaque corrupti sequi, pariatur cum fugit officiis dolor vitae? Voluptate quaerat laboriosam repellat nemo? Minus quod blanditiis aliquid rem officia, deserunt, incidunt nisi voluptas repellat ea iure expedita! Repellendus officiis distinctio, eveniet voluptatum libero minima omnis sunt aspernatur vitae, voluptate eum veniam dolorum dolores unde odit, rerum obcaecati sit quis nobis porro quas temporibus magni! Voluptas quibusdam sequi animi odit possimus officiis officia in exercitationem sit dignissimos dolore nesciunt minima porro laudantium veniam, consequatur vitae qui repellat deserunt omnis, temporibus fugit earum, eaque assumenda! Facilis exercitationem mollitia, voluptates saepe harum suscipit, ex inventore quisquam adipisci at possimus necessitatibus nam dolorem labore molestias facere error nisi pariatur sequi culpa aliquam reprehenderit numquam. Deleniti mollitia nesciunt quam nisi odio incidunt! Aliquam rerum provident optio quasi. Nulla vel rem beatae illum maxime soluta!
-        </p>
-    </div>
-
-
-    <!-- bloc nos partenaires -->
-    <div class="parent-partener">
-        <h4>Nos partenaires</h4>
-        <div class="partener">
-            <div class="partener__item"></div>
-            <div class="partener__item"></div>
-            <div class="partener__item"></div>
-            <div class="partener__item"></div>
+            <a href="#" class="blog__item">
+                <p>Janvier 13,2021</p>
+                <h4>Lorem ipsum dolor, sit amet consectetur adipisicing .</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus, dignissimos, architecto totam accusantium provident explicabo delectus laudantium expedita magni nulla natus officiis. Voluptate delectus minus deleniti asperiores distinctio aliquid nesciunt.
+                </p>
+            </a>
         </div>
     </div>
 
-    <!-- bloc footer -->
+
+
+    <!-- bloc footer =>considered like static to every page  -->
 
     <div class="parent-footer">
         <div class="footer">
@@ -111,6 +109,5 @@
     </div>
 
     <a class="btn-goUp" href="#home"><i class="fas fa-arrow-up"></i></a>
-
 </body>
 </html>
