--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
     </div>
 
-    <!-- bloc footer -->
+    <!-- bloc footer =>considered like static to every page  -->
 
     <div class="parent-footer">
         <div class="footer">
@@ -205,5 +205,7 @@
     </div>
 
     <a class="btn-goUp" href="#home"><i class="fas fa-arrow-up"></i></a>
+
+    <script src="/js/index.js"></script>
 </body>
 </html>
