--- a/blog.html
+++ b/blog.html
@@ -14,16 +14,18 @@
 
     <div class="parent-header">
         <div class="header">
+            <i class="fas fa-bars"></i>
             <div class="header__logo">
                 <img src="img/depositphotos_85435064-stock-illustration-hospital-cross-medical-logo-vector.jpg" alt="logo">
             </div>
             <div class="header__menu">
-                <a href="" class="menu__item">ACCEUIL</a>
-                <a href="" class="menu__item">A PROPOS</a>
-                <a href="" class="menu__item">SERVICES</a>
-                <a href="" class="menu__item">GALERIE</a>
-                <a href="" class="menu__item">BLOG</a>
-                <a href="" class="menu__item">CONTACT</a>
+                <a href="index.html" class="menu__item">ACCEUIL</a>
+                <a href="about.html" class="menu__item">A PROPOS</a>
+                <a href="services.html" class="menu__item">SERVICES</a>
+                <a href="gallery.html" class="menu__item">GALERIE</a>
+                <a href="blog.html" class="menu__item">BLOG</a>
+                <a href="contact.html" class="menu__item">CONTACT</a>
+                <i class="fas fa-times"></i>
             </div>
             <div class="header__contact">
                 <h4>235 4434 434</h4>
@@ -109,5 +111,6 @@
     </div>
 
     <a class="btn-goUp" href="#home"><i class="fas fa-arrow-up"></i></a>
+    <script src="/js/menu.js"></script>
 </body>
 </html>
