--- a/blog.html
+++ b/blog.html
@@ -37,6 +37,7 @@
     <!-- bloc of blogs -->
 
     <div class="parent-blog">
+        <h4>Nos blog recents</h4>
         <div class="blog">
             <a href="#" class="blog__item">
                 <p>Janvier 13,2021</p>
