--- a/services.html
+++ b/services.html
@@ -107,7 +107,7 @@
         </div>
     </div>
 
-    <a class="btn-goUp" href="#home"><i class="fas fa-arrow-up"></i></a>
+    <span class="btn-goUp" href=""><i class="fas fa-arrow-up"></i></span>
     <script src="/js/menu.js"></script>
 
 </body>
